<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".template.src.Register.RegisterCustomerActivity"
    android:orientation="vertical"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/register_iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_chevron_left_black_24dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="167dp"
            android:layout_height="24dp"
            android:text="@string/register_title"
            android:textSize="18sp"
            android:textColor="#222B45"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="22dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"/>
            <TextView
                android:layout_width="39dp"
                android:layout_height="16dp"
                android:textColor="@color/Title_Color"
                android:textSize="14sp"
                android:text="@string/common_id"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@drawable/style3"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="27dp">
                <EditText
                    android:singleLine="true"
                    android:nextFocusDown="@id/register_edt_userPw"
                    android:id="@+id/register_edt_userId"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:hint="@string/register_userIdHint"
                    android:backgroundTint="@color/Transparent"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:importantForAutofill="no"
                    android:inputType="text" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register_mandatory"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginEnd="14dp"
                    android:textColor="@color/Text_Mandatory"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textSize="14sp"
                android:text="@string/common_password"
                android:textColor="@color/Title_Color"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/style3"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="27dp">
                <EditText
                    android:id="@+id/register_edt_userPw"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Transparent"
                    android:hint="@string/register_userPwHint"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/register_edt_userPwCheck"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:importantForAutofill="no" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register_mandatory"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginEnd="14dp"
                    android:textColor="@color/Text_Mandatory"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/register_view_userPwCheck"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/style3"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="27dp">
                <EditText
                    android:id="@+id/register_edt_userPwCheck"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Transparent"
                    android:hint="@string/register_userPwCheckHint"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/register_edt_name"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:importantForAutofill="no" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register_mandatory"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginEnd="14dp"
                    android:textColor="@color/Text_Mandatory"/>
            </LinearLayout>

            <TextView
                android:id="@+id/register_tv_pwComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Text_Mandatory"
                tools:text="비밀번호가 일치하지 않습니다."
                android:gravity="center"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textSize="14sp"
                android:text="@string/common_name"
                android:textColor="@color/Title_Color"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/style3"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="27dp">
                <EditText
                    android:singleLine="true"
                    android:nextFocusDown="@id/register_edt_email"
                    android:id="@+id/register_edt_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/Transparent"
                    android:hint="@string/register_userNameHint"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register_mandatory"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginEnd="14dp"
                    android:textColor="@color/Text_Mandatory"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textSize="14sp"
                android:text="@string/common_email"
                android:textColor="@color/Title_Color"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/style3"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="27dp">
                <EditText
                    android:singleLine="true"
                    android:nextFocusDown="@id/register_edt_phone"
                    android:id="@+id/register_edt_email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/Transparent"
                    android:hint="@string/register_emailHint"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register_mandatory"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginEnd="14dp"
                    android:textColor="@color/Text_Mandatory"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textSize="14sp"
                android:text="@string/common_phone2"
                android:textColor="@color/Title_Color"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/style3"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="27dp">
                <EditText
                    android:singleLine="true"
                    android:id="@+id/register_edt_phone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/Transparent"
                    android:hint="@string/register_phoneHint"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/register_mandatory"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginEnd="14dp"
                    android:textColor="@color/Text_Mandatory"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textSize="14sp"
                android:text="@string/common_age"
                android:textColor="@color/Title_Color"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="5"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <View
                    android:layout_width="27dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/register_btn_age1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/age_button_background"
                    android:text="@string/register_ageBtn1"
                    android:textSize="14sp"
                    android:textColor="@drawable/age_button_color"
                    android:onClick="ageClick"/>
                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/register_btn_age2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:layout_height="match_parent"
                    android:background="@drawable/age_button_background"
                    android:text="@string/register_ageBtn2"
                    android:textColor="@drawable/age_button_color"
                    android:onClick="ageClick"/>
                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/register_btn_age3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/age_button_background"
                    android:textSize="14sp"
                    android:text="@string/register_ageBtn3"
                    android:textColor="@drawable/age_button_color"
                    android:onClick="ageClick" />
                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/register_age_btn4"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:background="@drawable/age_button_background"
                    android:textSize="14sp"
                    android:text="@string/register_ageBtn4"
                    android:textColor="@drawable/age_button_color"
                    android:onClick="ageClick"/>
                <View
                    android:layout_width="27dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:textSize="14sp"
                android:text="@string/common_gender"
                android:textColor="@color/Title_Color"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:layout_marginBottom="48dp">
                <View
                    android:layout_width="27dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/register_btn_genderWoman"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/age_button_background"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="@drawable/age_button_color"
                    android:text="@string/register_genderWoman"
                    android:onClick="genderClick"/>
                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/register_btn_genderMan"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@drawable/age_button_background"
                    android:textColor="@drawable/age_button_color"
                    android:textSize="14sp"
                    android:text="@string/register_genderMan"
                    android:onClick="genderClick"/>
                <View
                    android:layout_width="27dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/register_btn_next"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:text="@string/common_next"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:background="@drawable/style4"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="22dp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="22dp"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>