<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    tools:context=".template.src.CustomDialogOneButton"
    android:orientation="vertical"
    android:background="@drawable/style_dialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ff7889"
        android:gravity="center"
        android:text="@string/dialog_notice"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/customdialogTwoButton_tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="14sp"
        tools:text="내용" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dialog_yes"
            android:gravity="center"
            android:textSize="14sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/main"/>
        <TextView
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dialog_no"
            android:gravity="center"
            android:textSize="14sp" />
    </LinearLayout>


</LinearLayout>