<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".template.src.myPage.ProfileEdit.ProfileEditFragment"
    android:orientation="vertical"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">
        <ImageView
            android:id="@+id/profileEdit_iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:textSize="18sp"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/Title_Color"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/profileEdit_tv_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/profile_complete"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginEnd="22dp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_name"
                android:textSize="10sp"
                android:textColor="@color/gray"
                android:layout_marginStart="49dp"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="16dp">
                <EditText
                    android:inputType="text"
                    android:id="@+id/profileEdit_edt_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main"
                    tools:text="장승민"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_writing"
                android:textSize="10sp"
                android:textColor="@color/gray"
                android:layout_marginStart="49dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/profileEdit_edt_comment"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main"
                    tools:text="내일은 없다. 달리자!"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_email"
                android:textSize="10sp"
                android:textColor="@color/gray"
                android:layout_marginStart="49dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="16dp">
                <EditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/profileEdit_edt_email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main"
                    tools:text="tmdalsy@naver.com"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_phone"
                android:textSize="10sp"
                android:textColor="@color/gray"
                android:layout_marginStart="49dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/profileEdit_edt_phone"
                    android:inputType="phone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main"
                    tools:text="010-1234-5678"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>